# ha-dreame-a2-mower

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  hacs.json  pyproject.toml
custom_components/dreame_a2_mower/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  lawn_mower.py  lidar_archive.py  live_map.py  manifest.json  number.py  recorder.py  select.py  sensor.py  services.yaml  session_archive.py  strings.json  switch.py
custom_components/dreame_a2_mower/dreame/: __init__.py  const.py  device.py  map.py  protocol.py  types.py
custom_components/dreame_a2_mower/protocol/: cfg_action.py  config_s2p51.py  heartbeat.py  pcd_render.py  pose.py  properties_g2408.py  replay.py  telemetry.py  trail_overlay.py  unknown_watchdog.py
custom_components/dreame_mower/: coordinator.py  manifest.json
dashboards/: mower.yaml
docs/: dashboard-setup.md
docs/research/: g2408-protocol.md  webgl-lidar-card-feasibility.md
tests/: conftest.py  test_lidar_archive.py  test_sensor_helpers.py  test_session_archive.py
tests/dreame/: test_capability_g2408_snapshot.py
tests/fixtures/: session_short.jsonl
tests/live_map/: test_in_progress.py  test_live_map_integration.py  test_live_map_state.py  test_mode_transitions.py  test_replay_session.py  test_summary_overlay.py
tests/protocol/: test_config_s2p51.py  test_entity_jsonable.py  test_heartbeat.py  test_pcd_render.py  test_pose.py  test_property_overlay.py  test_replay.py  test_telemetry.py  test_trail_overlay.py  test_unknown_watchdog.py
(+33 files in other folders)
