[project]
name = "ha-dreame-a2-mower"
version = "2.0.0-alpha.38"
description = "Home Assistant integration for the Dreame A2 robotic lawn mower"
requires-python = ">=3.14"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["custom_components/dreame_a2_mower"]
addopts = "-ra -q"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
